  transformed problem to be infeasible in the original problem
- fixed bug when flushing the warning buffer when SCIP is closed
- fixed wrong strong branching results in lpi_grb.c and an invalid write
- fixed wrong presolving finished status which sometimes occurred when the time limit was hit during presolve
- fixed several bugs where variables or constraints were not freed correctly

data structures
- new data structure for (circular) queues (SCIP_QUEUE)

features:
- added new dual presolving for setppc-constraints
- changed dualfix presolver to propagator such that dual fixing can also be applied during repropagation of the root node
- added upgrade from varbound constraints to set-packing constraints
- added SCIPwriteCliqueGraph() to scip.{c,h} to write the clique graph in GML format into a given file
- added upgrade from bounddisjunction constraints to set-packing/logicor constraints
- added two methods to iterate over a sparse solution (SCIP_SPARSESOLUTION), see pub_misc.h
- added possibility to not set a cutoff bound in the LP solver (can be enabled by setting <lp/disablecutoff> to TRUE)
- added passing MEM option of testgams(cluster) target as workspace option to GAMS jobs
- cumulative constraint handler adds disjunctive constraints (cumulative with capacity 1) for all jobs which cannot
  be processed in parallel
- added new clique extraction algorithm for linear constraints
- added missing debugging solution check for cliques
- the slack variables of indicator constraints can now be scaled
- added redundancy check of sides of ranged row varbound constraint
- added coefficient tightening for ranged row varbound constraint
- added SCIPsortLongPtrRealBool(), SCIPsortLongPtrRealRealBool(), SCIPsortLongPtrRealRealIntBool() and corresponding
  methods for sorting, insertion and deletion
- added a data pointer to each node of the SCIP_DIGRAPH
- the statistics now include the value of the first LP solved at the root node (without cuts)